# libsnet

./: .gitignore  COPYING  Makefile  Makefile.am  Makefile.in  NOTES  aclocal.m4  config.h.in  configure  configure.ac  snet.c  snet.h  snet.h.in
m4/: ax_with_library.m4
packaging/freebsd/: Makefile  pkg-descr  pkg-plist
packaging/pkgconfig/: libsnet.pc.in
packaging/rpm/: libsnet.spec.in
